--- a/static/tpl/ShellView.html
+++ b/static/tpl/ShellView.html
@@ -24,11 +24,8 @@
     </div>
 </div>
 
-<div id="shell-convas"></div>
-<section id="main">
-  <div class="container">
+<div class="container"></div>
     <div class="row-fluid">
         <div class="span12" id="content"></div>
     </div>
-  </div>
 </div>
