--- a/static/tpl/ShellView.html
+++ b/static/tpl/ShellView.html
@@ -6,14 +6,17 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="brand" href="#">Resto</a>
+            <a class="brand" href="#">AppName</a>
 
             <div class="nav-collapse collapse">
                 <ul class="nav">
-                    <li class="home-menu active"><a href="#">Home</a></li>
+                    <% if (!loggedIn) { %>
                     <li class="register-menu"><a href="#register">Register</a></li>
-                    <li class-"login-menu"><a href="#login">Log in</a></li>
-                    <li class-"logout-menu"><a href="#logout">Log out</a></li>           
+                    <li class="login-menu"><a href="#login">Log in</a></li>
+                    <% } else { %>
+                    <li class="upload-menu"><a href="#upload">Upload</a></li>
+                    <li class="logout-menu"><a href="#logout">Log out</a></li>  
+                    <% } %>         
                 </ul>
                        <form class="navbar-search pull-right dropdown">
                     <input id="searchText" type="search" class="search-query dropdown-toggle" placeholder="Search" autocomplete="off">
