--- a/static/tpl/ShellView.html
+++ b/static/tpl/ShellView.html
@@ -14,6 +14,7 @@
                     <li class="register-menu"><a href="#register">Register</a></li>
                     <li class="login-menu"><a href="#login">Log in</a></li>
                     <% } else { %>
+                    <li class="profile-menu"><a href="#profile">Profile</a></li>
                     <li class="upload-menu"><a href="#upload">Upload</a></li>
                     <li class="logout-menu"><a href="#logout">Log out</a></li>  
                     <% } %>         
